# Ahtohallan

./: .gitignore  ARCHITECTURE.md  CHANGELOG_DEEP_THINK_REMOVAL.md  Cargo.toml  DEVELOPER_GUIDE.md  Dioxus.toml  FIXED.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LATENCY_FIX_REPORT.md  LATENCY_OPTIMIZATION.md  PERFORMANCE_README.md  PERFORMANCE_SUMMARY.md  QUICKSTART.md  QUICK_FIX.md  QUICK_PERFORMANCE_FIXES.md  README.md  START.md  SUCCESS.md  TEST_PERFORMANCE.md  TROUBLESHOOTING.md  UI_CHANGE_DEEP_THINK.md  UPLOAD_CHANGES.md  check_ollama.ps1  check_ollama.sh  run.bat  run.sh
assets/: main.css
sample-docs/: Nvidia.md  WW2.md  rust-overview.md
src/: main.rs
